--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link text-white" href="#">News</a>
                             <a class="nav-link text-white" href="#">Live cameras</a>
                             <a class="nav-link text-white" href="#">Photos</a>
-                            <a class="nav-link text-white" href="#">Contact</a>
+                            <a class="nav-link text-white" href="./contact.html">Contact</a>
                         </div>
                     </div>
                 </div>
